--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,11 @@
 				</configuration>
 			</plugin>
 			<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-jar-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
+					<finalName>FolderWatcher</finalName>
 					<archive>
 						<manifest>
 						<mainClass>com.joehalliwell.fw.FolderWatcher</mainClass>
